--- a/src/index.pug
+++ b/src/index.pug
@@ -6,5 +6,9 @@ block var
 
 block banner,breadcrumb
 block main
-	include components/google-map/g-map
+	include ./components/index/i-1
+	include ./components/_global/_surprise
+	include ./components/index/i-2
+	include ./components/index/i-3
+	include ./components/index/i-4
 block scripts
