--- a/src/scss/globals/reset.scss
+++ b/src/scss/globals/reset.scss
@@ -24,12 +24,12 @@ section {
 
 body {
 	margin          : 0;
-	font-family     : Roboto;
+	font-family     : 'Roboto', sans-serif;
 	text-align      : left;
 	font-size       : 16px;
 	font-weight     : 400;
 	line-height     : 1.5;
-	color           : #1c1c1c;
+	color           : #000000;
 	background-color: #ffffff;
 }
 
