--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -10,6 +10,7 @@ html(lang="en")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
 		link(rel="stylesheet", href="./css/core.min.css")
 		link(rel="stylesheet", href="./css/main.min.css")
+		link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet")
 	body
 		#fb-root
 		#loading
@@ -29,7 +30,6 @@ html(lang="en")
 		block footer
 			include _footer.pug
 		//- include scripts
-		script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyCHvmyTralDp2Y0m7zEiN185u1vtArcC5s&libraries=places")
 		//- script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
 		block scripts
 		script(type="text/javascript", src="./js/core.min.js")
