--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -4,154 +4,113 @@
 	display: none !important;
 }
 
-// GOOGLE MAP
-.google-map {
+.ofc {
+	width          : 100%;
+	height         : 100%;
+	object-fit     : cover;
+	object-position: center;
+	font-family    : 'object-fit: cover, object-position: center';
+}
+
+.title {
 	position: relative;
 
-	select {
-		display : table-cell;
-		position: absolute;
-		top     : 10px;
-		left    : 191px;
-		z-index : 1;
-
-		font-family     : Roboto, Arial, sans-serif;
-		font-size       : 18px;
-		color           : rgb(86, 86, 86);
-		background-color: rgb(255, 255, 255);
-		text-align      : center;
-
-		min-width: 57px;
-		height   : 40px;
-
-		direction                 : ltr;
-		overflow                  : hidden;
-		vertical-align            : middle;
-		user-select               : none;
-		padding                   : 0px 17px;
-		border                    : none;
-		border-bottom-right-radius: 2px;
-		border-top-right-radius   : 2px;
-		background-clip           : padding-box;
-		box-shadow                : rgba(0, 0, 0, 0.3) 0px 1px 4px -1px;
-	}
-
-	#map {
-		width : 100%;
-		height: 625px;
-	}
-}
-
-// THANH ĐƯỜNG DẪN TRANG
-#breadcrumb-wrapper {
-	padding-top: 65px;
-
-	h1 {
-		font-size  : 42px;
-		color      : #434343;
-		font-weight: 700;
+	h3 {
 		text-align : center;
+		font-size  : 34px;
+		font-weight: 700;
+		color      : #F6871F;
 	}
 
-	.breadcrumb {
-		list-style     : none;
-		display        : flex;
-		justify-content: center;
-		padding        : 0;
+	.more-title {
+		position     : relative;
+		padding-right: 37px;
+		bottom       : 20px;
+		right        : 0;
 
-		li {
-			a {
-				color      : #000000;
-				font-size  : 17px;
-				display    : inline-block;
-				padding-top: 20px;
-			}
-
-			&.active {
-				a {
-					color: red;
-				}
-			}
-
-			&+li {
-				&:before {
-					content : "/";
-					position: relative;
-					left    : 0;
-					top     : 0;
-					margin  : 0 12px;
-				}
-			}
+		span {
+			background    : white;
+			z-index       : 2;
+			position      : relative;
+			color         : #C1C1C1;
+			padding-right : 30px;
+			letter-spacing: 11px;
 		}
-	}
 
-	@media (max-width: 767.98px) {
-		.breadcrumb {
-			li {
-				a {
-					font-size: 12px;
-					padding  : 10px 0;
-				}
-			}
+		&:after {
+			content   : '';
+			position  : absolute;
+			top       : 50%;
+			left      : 0;
+			width     : 100%;
+			height    : 1px;
+			background: #C1C1C1;
+			transform : translateY(-50%);
+			z-index   : 1;
 		}
 	}
 }
 
-// CÁC NÚT PHÂN TRANG
-.pagination {
-	background     : #FFFFFF;
-	display        : flex;
-	justify-content: flex-end;
-	padding        : 30px 0;
+.form-group {
+	button {
+		width        : 100%;
+		line-height  : 62px;
+		border-radius: 0 30px 0 30px;
+		background   : #F6871F;
+		box-shadow   : 0 3px 6px rgba($color: #000000, $alpha: .16);
+		border       : none;
+		color        : #FFFFFF;
+		font-size    : 18px;
+		font-weight  : 700;
+	}
+}
 
-	@media (max-width: 1024.98px) {
-		justify-content: center;
+
+.form-row {
+	display  : flex;
+	flex-wrap: wrap;
+}
+
+.block-subscribe {
+	position  : relative;
+	margin-top: -64px;
+	z-index   : 100;
+
+	.form-group {
+		.input-group {
+			input {
+				border       : none;
+				background   : #ffffff;
+				line-height  : 62px;
+				font-size    : 18px;
+				padding      : 0 25px;
+				border-radius: 5px;
+				width        : 100%;
+				color        : #777777;
+
+				&::placeholder {
+					color: #C1C1C1;
+				}
+			}
+		}
 	}
 
-	li {
-		margin: 0 10px;
+	.subscribe {
+		border       : 10px solid rgba($color: #C1C1C1, $alpha: .2);
+		border-radius: 0 30px 0 30px;
 
-		@media (max-width: 1024.98px) {
-			margin: 0 5px;
-		}
+		.block-form {
+			background   : #F1F1F1;
+			padding      : 22px 91px;
+			box-shadow   : 0px 3px 6px rgba($color: #000000, $alpha: .16);
+			border-radius: 0 30px 0 30px;
 
-		a {
-			display        : flex;
-			justify-content: center;
-			align-items    : center;
-			height         : 30px;
-			width          : 30px;
-			color          : #000000;
-			border-radius  : 5px;
-			font-weight    : 400;
-			font-size      : 12px;
-			background     : #dddddd;
-			border         : 1px solid #FFFFFF;
-			transition     : all .2s cubic-bezier(.2, .5, .5, .8);
-		}
+			.form-row {
+				margin: 0 -12px;
 
-		&:hover {
-			a {
-				color     : #FFFFFF;
-				background: red;
-			}
-		}
-
-		&:last-child {
-			margin: 0 0 0 10px;
-		}
-
-		&.active {
-			a {
-				color          : #FFFFFF;
-				background     : red;
-				text-decoration: underline;
-			}
-		}
-
-		&.pagination-dot {
-			a {
-				border: 0;
+				.form-group {
+					padding: 0 12px;
+				}
 			}
 		}
 	}
