--- a/src/components/_global/_surprise.pug
+++ b/src/components/_global/_surprise.pug
@@ -6,13 +6,13 @@
 					.form-row
 						.form-group.col-lg-3
 							.input-group
-								input(type="text" placeholder="Họ Tên")
+								input(type="text" placeholder="Họ Tên*")
 						.form-group.col-lg-3
 							.input-group
-								input(type="text" placeholder="Họ Tên")
+								input(type="text" placeholder="Điện thoại*")
 						.form-group.col-lg-3
 							.input-group
-								input(type="text" placeholder="Họ Tên")
+								input(type="text" placeholder="Email*")
 						.form-group.col-lg-3
 							.input-group
 								button Nhận Ưu Đãi Ngay
