--- a/src/components/_layout/_header.pug
+++ b/src/components/_layout/_header.pug
@@ -3,6 +3,8 @@ header
 		.row.no-gutters
 			.logo
 				img(src="./assets/images/logo.png", alt="", srcset="")
+			.button-mobile
+				span.line
 			.list-nav
 				.item-nav
 					a(href="#") nâng ngực 6.0
