--- a/src/components/index/i-2.pug
+++ b/src/components/index/i-2.pug
@@ -6,7 +6,7 @@
 				span WORLDWIDE HOSPITAL
 		.list-item-sale.row
 			-for(i=1;i<4;i++)
-				.item-sale.col-lg-4
+				.item-sale.col-md-4
 					figure
 						img(src="./assets/images/index/item-sale-"+i+".png", alt="", srcset="")
 						figcaption
