--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -29,6 +29,10 @@ html(lang="en")
 			#js-page-verify(class=bodyClass hidden)
 		block footer
 			include _footer.pug
+		#phone
+			a(href="#")
+				img.svg(src="./assets/images/icons/phone.svg", alt="")
+		.overlay
 		//- include scripts
 		//- script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
 		block scripts
