--- a/src/components/index/i-5.pug
+++ b/src/components/index/i-5.pug
@@ -1,2 +1,11 @@
 .index-5
-	
+	.container
+		.title
+			h3 CƠ SỞ - HẠ TẦNG
+			.more-title
+				span WORLDWIDE HOSPITAL
+		.list-infrastructure
+			-for(i=1;i<4;i++)
+				.item
+					figure
+						img(src="./assets/images/index/item-infrastructure-"+i+".png", alt="", srcset="")
