--- a/src/index.pug
+++ b/src/index.pug
@@ -11,4 +11,5 @@ block main
 	include ./components/index/i-2
 	include ./components/index/i-3
 	include ./components/index/i-4
+	include ./components/index/i-5
 block scripts
