--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -4,6 +4,54 @@
 	display: none !important;
 }
 
+body {
+	&.disabled {
+		overflow: hidden;
+	}
+}
+
+.overlay {
+	opacity       : 0;
+	visibility    : hidden;
+	pointer-events: none;
+
+	background-color: rgba(0, 0, 0, .8);
+	width           : 100%;
+	height          : 100%;
+	position        : fixed;
+	top             : 0;
+	left            : 0;
+	z-index         : 150;
+	transition      : .3s all ease-in-out;
+
+	&.active {
+		opacity       : 1;
+		visibility    : visible;
+		pointer-events: visible;
+	}
+}
+
+#phone {
+	position: fixed;
+	right   : 27px;
+	top     : 535px;
+	z-index : 100;
+
+	@media (max-width: 1024.98px) {
+		display: none;
+	}
+}
+
+#button-to-top {
+	position: absolute;
+	top     : -56px;
+	right   : 27px;
+
+	@media (max-width: 1024.98px) {
+		display: none;
+	}
+}
+
 .ofc {
 	width          : 100%;
 	height         : 100%;
@@ -25,11 +73,11 @@
 	.more-title {
 		position     : relative;
 		padding-right: 37px;
-		bottom       : 20px;
+		bottom       : 0;
 		right        : 0;
 
 		span {
-			background    : white;
+			background    : #F9F9F9;
 			z-index       : 2;
 			position      : relative;
 			color         : #C1C1C1;
@@ -49,6 +97,33 @@
 			z-index   : 1;
 		}
 	}
+
+	@media (max-width: 1024.98px) {
+		h3 {
+			font-size: 24px;
+		}
+
+		.more-title {
+			span {
+				font-size     : 14px;
+				letter-spacing: 2px;
+			}
+		}
+	}
+
+	@media (max-width: 767.98px) {
+		h3 {
+			font-size: 18px;
+		}
+
+		.more-title {
+
+			span {
+				font-size    : 12px;
+				padding-right: 10px;
+			}
+		}
+	}
 }
 
 .form-group {
@@ -63,8 +138,29 @@
 		font-size    : 18px;
 		font-weight  : 700;
 	}
-}
 
+	@media (max-width: 1024.98px) {
+		button {
+			font-size    : 14px;
+			width        : 50%;
+			line-height  : 35px;
+			border-radius: 5px;
+		}
+	}
+
+	@media (max-width: 767.98px) {
+		button {
+			padding    : 0 10px;
+			line-height: 30px;
+		}
+	}
+
+	@media (max-width: 320px) {
+		button {
+			width: 60%;
+		}
+	}
+}
 
 .form-row {
 	display  : flex;
@@ -103,13 +199,54 @@
 			background   : #F1F1F1;
 			padding      : 22px 91px;
 			box-shadow   : 0px 3px 6px rgba($color: #000000, $alpha: .16);
-			border-radius: 0 30px 0 30px;
+			border-radius: 0 20px 0 20px;
 
 			.form-row {
 				margin: 0 -12px;
 
 				.form-group {
 					padding: 0 12px;
+				}
+			}
+		}
+	}
+
+	@media (max-width: 1024.98px) {
+		margin-top: 25px;
+
+		.subscribe {
+			.block-form {
+				padding: 20px;
+
+				.form-row {
+					.form-group {
+						margin-bottom: 15px;
+
+						.input-group {
+							text-align: center;
+
+							input {
+								font-size  : 14px;
+								line-height: 35px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+	@media (max-width: 767.98px) {
+		margin-top: 15px;
+
+		.subscribe {
+			.block-form {
+				padding: 10px;
+
+				.form-row {
+					.form-group {
+						margin-bottom: 10px;
+					}
 				}
 			}
 		}
