--- a/src/components/_layout/_header.pug
+++ b/src/components/_layout/_header.pug
@@ -7,10 +7,10 @@ header
 				span.line
 			.list-nav
 				.item-nav
-					a(href="#") nâng ngực 6.0
+					a(href="#index-2") nâng ngực 6.0
 				.item-nav
-					a(href="#") chương trình khuyến mãi
+					a(href="#index-3") chương trình khuyến mãi
 				.item-nav
-					a(href="#") hình ảnh khách hàng
+					a(href="#index-4") hình ảnh khách hàng
 				.item-nav
-					a(href="#") cơ sở hạ tầng
+					a(href="#index-5") cơ sở hạ tầng
