--- a/src/components/index/i-3.pug
+++ b/src/components/index/i-3.pug
@@ -1,8 +1,8 @@
-.index-3
+.index-3#index-3
 	.container
 		.block-form-index-3
 			.block-form
-				.title-form NHẬN NGAY ƯU ĐÃI ĐẶC BIỆT
+				.title-form.wow.fadeIn(data-wow-delay=".2s") NHẬN NGAY ƯU ĐÃI ĐẶC BIỆT
 					br
 					| CHỈ TRONG THÁNG 12
 				.desc Để được hỗ trợ MIỄN PHÍ và NHANH NHẤT, Quý khách hãy cung cấp thông tin
