--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -1,6 +1,6 @@
-.index-4
+.index-4#index-4
 	.container
-		.title
+		.title.wow.fadeInUp(data-wow-delay=".2s")
 			h3 HÌNH ẢNH KHÁCH HÀNG
 			.more-title
 				span WORLDWIDE HOSPITAL
