--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -1,3 +1,3 @@
-.index-1
+.index-1.wow.fadeIn(data-wow-delay=".2s")
 	figure
-		img(src="./assets/images/index/main-banner.png", alt="", srcset="")
+		img.ofc(src="./assets/images/index/main-banner.png", alt="", srcset="")
