--- a/src/components/index/i-2.pug
+++ b/src/components/index/i-2.pug
@@ -1,13 +1,25 @@
-.index-2
+.index-2#index-2
 	.container
-		.title
+		.title.wow.fadeInUp(data-wow-delay=".2s")
 			h3 CHƯƠNG TRÌNH KHUYẾN MÃI
 			.more-title
 				span WORLDWIDE HOSPITAL
 		.list-item-sale.row
-			-for(i=1;i<4;i++)
-				.item-sale.col-md-4
-					figure
-						img(src="./assets/images/index/item-sale-"+i+".png", alt="", srcset="")
-						figcaption
-							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean commodo ligula eget dolor.
+			.item-sale.col-md-4.wow.fadeInLeft(data-wow-delay=".4s")
+				figure
+					.box-img
+						img.ofc(src="./assets/images/index/item-sale-1.png", alt="", srcset="")
+					figcaption
+						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean commodo ligula eget dolor.
+			.item-sale.col-md-4.wow.fadeInLeft(data-wow-delay=".6s")
+				figure
+					.box-img
+						img.ofc(src="./assets/images/index/item-sale-2.png", alt="", srcset="")
+					figcaption
+						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean commodo ligula eget dolor.
+			.item-sale.col-md-4.wow.fadeInLeft(data-wow-delay=".6s")
+				figure
+					.box-img
+						img.ofc(src="./assets/images/index/item-sale-3.png", alt="", srcset="")
+					figcaption
+						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean commodo ligula eget dolor.
