--- a/src/components/index/i-5.pug
+++ b/src/components/index/i-5.pug
@@ -1,11 +1,16 @@
-.index-5
+.index-5#index-5
 	.container
-		.title
+		.title.wow.fadeInUp(data-wow-delay=".2s")
 			h3 CƠ SỞ - HẠ TẦNG
 			.more-title
 				span WORLDWIDE HOSPITAL
 		.list-infrastructure
-			-for(i=1;i<4;i++)
-				.item
-					figure
-						img(src="./assets/images/index/item-infrastructure-"+i+".png", alt="", srcset="")
+			.item.wow.fadeInLeft(data-wow-delay=".2s")
+				figure
+					img(src="./assets/images/index/item-infrastructure-1.png", alt="", srcset="")
+			.item.wow.fadeInLeft(data-wow-delay=".4s")
+				figure
+					img(src="./assets/images/index/item-infrastructure-2.png", alt="", srcset="")
+			.item.wow.fadeInLeft(data-wow-delay=".6s")
+				figure
+					img(src="./assets/images/index/item-infrastructure-3.png", alt="", srcset="")
