--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -1,7 +1,40 @@
 .index-1 {
 	figure {
+		height  : 840px;
+		overflow: hidden;
+
 		img {
 			width: 100%;
+
+			transition      : 1s all ease-in-out;
+			transform-origin: 0 0;
+			animation       : leaves 5s ease-in-out infinite alternate;
+
+			@-webkit-keyframes leaves {
+				0% {
+					-webkit-transform: scale(1);
+				}
+
+				100% {
+					-webkit-transform: scale(1.025);
+				}
+			}
+
+			@keyframes leaves {
+				0% {
+					transform: scale(1);
+				}
+
+				100% {
+					transform: scale(1.025);
+				}
+			}
+		}
+	}
+
+	@media (max-width: 1024.98px) {
+		figure {
+			height: auto;
 		}
 	}
 }
@@ -13,9 +46,18 @@
 		margin: 98px -5px 0;
 
 		.item-sale {
+			cursor : pointer;
 			padding: 0 5px;
 
 			figure {
+				.box-img {
+					overflow: hidden;
+
+					img {
+						transition: .3s all ease-in-out;
+					}
+				}
+
 				figcaption {
 					margin: 47px 60px 0;
 
@@ -24,6 +66,18 @@
 						text-align : center;
 						font-size  : 18px;
 						font-weight: 500;
+					}
+				}
+			}
+
+			@media (min-width: 1440px) {
+				&:hover {
+					figure {
+						.box-img {
+							img {
+								transform: scale(1.1);
+							}
+						}
 					}
 				}
 			}
@@ -38,6 +92,10 @@
 
 			.item-sale {
 				figure {
+					.box-img {
+						height: auto;
+					}
+
 					figcaption {
 						margin: 15px 0 0 0;
 
@@ -143,6 +201,12 @@
 				width : 635px;
 				margin: 0 auto;
 			}
+		}
+	}
+
+	@media (max-width: 1440px) {
+		.block-form-index-3 {
+			margin: 0 80px;
 		}
 	}
 
@@ -318,10 +382,15 @@
 		}
 
 		.item {
+			cursor: pointer;
+
 			figure {
+				overflow: hidden;
+
 				img {
-					width : 100%;
-					height: auto;
+					width     : 100%;
+					height    : auto;
+					transition: .3s all ease-in-out;
 				}
 			}
 
@@ -339,8 +408,21 @@
 				float: left;
 				width: 745px;
 			}
+
+			@media (min-width: 1440px) {
+				&:hover {
+					figure {
+
+						img {
+							transform: scale(1.1);
+						}
+					}
+				}
+			}
+
 		}
 	}
+
 
 	@media (max-width: 1640px) {
 		.list-infrastructure {
