--- a/src/components/_layout/_footer.pug
+++ b/src/components/_layout/_footer.pug
@@ -8,14 +8,10 @@ footer
 					li.item ĐT: 1800 823 058
 			.col-no-rel
 				ul.list-link
-					.item
-						a(href="#") NÂNG NGỰC 6.0
-					.item
-						a(href="#") CHƯƠNG TRÌNH KHUYẾN MÃI
-					.item
-						a(href="#") HÌNH ẢNH KHÁCH HÀNG
-					.item
-						a(href="#") CƠ SỞ HẠ TẦNG
+					.item(data-href="#index-2") NÂNG NGỰC 6.0
+					.item(data-href="#index-2") CHƯƠNG TRÌNH KHUYẾN MÃI
+					.item(data-href="#index-2") HÌNH ẢNH KHÁCH HÀNG
+					.item(data-href="#index-2") CƠ SỞ HẠ TẦNG
 	#button-to-top
 		img.svg(src="./assets/images/icons/button-to-top.svg", alt="", srcset="")
 .copy-right
