--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -15,7 +15,7 @@ html(lang="en")
 		#fb-root
 		#loading
 			.logo-loader
-				img(src="./assets/images/icons/loading.svg", alt="")
+				img(src="./assets/images/logo.png", alt="")
 			.progstat-wrapper Loading:
 				span#progstat 0
 				| %
