--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -10,28 +10,26 @@ body {
 	}
 }
 
-* {
-	scroll-behavior: smooth;
-}
-
 .overlay {
-	opacity       : 0;
-	visibility    : hidden;
-	pointer-events: none;
+	@media (max-width: 1199.98px) {
+		opacity       : 0;
+		visibility    : hidden;
+		pointer-events: none;
 
-	background-color: rgba(0, 0, 0, .8);
-	width           : 100%;
-	height          : 100%;
-	position        : fixed;
-	top             : 0;
-	left            : 0;
-	z-index         : 150;
-	transition      : .3s all ease-in-out;
+		background-color: rgba(0, 0, 0, .8);
+		width           : 100%;
+		height          : 100%;
+		position        : fixed;
+		top             : 0;
+		left            : 0;
+		z-index         : 150;
+		transition      : .3s all ease-in-out;
 
-	&.active {
-		opacity       : 1;
-		visibility    : visible;
-		pointer-events: visible;
+		&.active {
+			opacity       : 1;
+			visibility    : visible;
+			pointer-events: visible;
+		}
 	}
 }
 
@@ -144,6 +142,14 @@ body {
 		color        : #FFFFFF;
 		font-size    : 18px;
 		font-weight  : 700;
+		transition   : .3s all ease;
+
+		@media (min-width: 1440px) {
+			&:hover {
+				border-radius: 30px 0 30px 0;
+				background   : rgb(180, 87, 0);
+			}
+		}
 	}
 
 	@media (max-width: 1024.98px) {
