--- a/src/scss/pages/components/_layout/header.scss
+++ b/src/scss/pages/components/_layout/header.scss
@@ -1,9 +1,12 @@
 header {
+	position  : fixed;
+	top       : 0;
+	left      : 0;
+	width     : 100%;
 	height    : 122px;
 	background: #FFFFFF;
 	box-shadow: 0px 3px 6px rgba($color: #000000, $alpha: .16);
 	padding   : 23.5px 0;
-	position  : relative;
 	z-index   : 200;
 
 	.button-mobile {
@@ -70,10 +73,15 @@ header {
 		margin-left: auto;
 
 		.item-nav {
-			margin-right: 30px;
+			cursor        : pointer;
+			margin-right  : 30px;
+			text-transform: uppercase;
+			transition    : .3s all ease;
 
-			>a {
-				text-transform: uppercase;
+			@media (min-width: 1440px) {
+				&:hover {
+					color: #f6871f;
+				}
 			}
 
 			&:last-child {
@@ -111,14 +119,15 @@ header {
 	}
 
 	@media (max-width: 767.98px) {
-		height: 93px;
+		height : 70px;
+		padding: 12px 0;
 
 		.logo {
 			width: 35%;
 		}
 
 		.list-nav {
-			top: 93px;
+			top: 70px;
 
 			.item-nav {
 				font-size: 14px;
