--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -29,7 +29,7 @@ html(lang="en")
 			#js-page-verify(class=bodyClass hidden)
 		block footer
 			include _footer.pug
-		#phone
+		#phone-fixed
 			a(href="#")
 				img.svg(src="./assets/images/icons/phone.svg", alt="")
 		.overlay
