--- a/src/components/index/i-3.pug
+++ b/src/components/index/i-3.pug
@@ -11,12 +11,12 @@
 				form(action="#")
 					.form-group
 						.input-group
-							input(type="text" placeholder="TÊN")
+							input#name(type="text" placeholder="TÊN")
 					.form-group
 						.input-group
-							input(type="text" placeholder="ĐIỆN THOẠI")
+							input#phone(type="text" placeholder="ĐIỆN THOẠI")
 					.form-group
 						.input-group
-							input(type="text" placeholder="EMAIL")
+							input#email(type="text" placeholder="EMAIL")
 					.form-group
-						button NHẬN ƯU ĐÃI NGAY
+						button#submit-form(data-url="/") NHẬN ƯU ĐÃI NGAY
