--- a/src/components/_global/_surprise.pug
+++ b/src/components/_global/_surprise.pug
@@ -15,4 +15,4 @@
 								input#email(type="text" placeholder="Email*")
 						.form-group.col-lg-3
 							.input-group
-								button#submit-form(data-url="/") Nhận Ưu Đãi Ngay
+								button#submit-form(data-url="#") Nhận Ưu Đãi Ngay
