--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -29,6 +29,7 @@ html(lang="en")
 			#js-page-verify(class=bodyClass hidden)
 		block footer
 			include _footer.pug
+		input#recaptcha(type="text" name="g-recaptcha-response" hidden)
 		#phone-fixed
 			a(href="#")
 				img.svg(src="./assets/images/icons/phone.svg", alt="")
