--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -1,3 +1,35 @@
+.error-404 {
+	position: relative;
+	width   : 100%;
+	height  : 100vh;
+	overflow: hidden;
+
+	.box-content {
+		position : absolute;
+		top      : 50%;
+		left     : 50%;
+		transform: translate(-50%, -50%);
+
+		figure {
+			figcaption {
+				margin-top: 50px;
+				text-align: center;
+
+				h3 {
+					color        : #f68b3c;
+					font-size    : 24px;
+					margin-bottom: 15px;
+				}
+
+				p {
+					font-size: 18px;
+					color    : #444444;
+				}
+			}
+		}
+	}
+}
+
 .index-1 {
 	figure {
 		height  : 840px;
