--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -11,6 +11,11 @@
 		transform: translate(-50%, -50%);
 
 		figure {
+			img {
+				display: block;
+				margin : 0 auto;
+			}
+
 			figcaption {
 				margin-top: 50px;
 				text-align: center;
@@ -24,6 +29,28 @@
 				p {
 					font-size: 18px;
 					color    : #444444;
+
+					span {
+						margin-left: 15px;
+						color      : red;
+					}
+				}
+			}
+		}
+	}
+
+
+	@media (max-width: 767.98px) {
+		.box-content {
+			figure {
+				figcaption {
+					h3 {
+						font-size: 18px;
+					}
+
+					p {
+						font-size: 14px;
+					}
 				}
 			}
 		}
