--- a/src/components/index/i-2.pug
+++ b/src/components/index/i-2.pug
@@ -10,16 +10,17 @@
 					.box-img
 						img.ofc(src="./assets/images/index/item-sale-1.png", alt="", srcset="")
 					figcaption
-						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean commodo ligula eget dolor.
+						p Các bác sĩ chuyên khoa sẽ định vị chuẩn xác vị trí mô mỡ nhằm phá hủy và đào thải chúng ra khỏi cơ thể, trả lại vẻ đẹp săn chắc, bằng phẳng với bề mặt da mềm mại và mịn màng hơn.
 			.item-sale.col-md-4.wow.fadeInLeft(data-wow-delay=".6s")
 				figure
 					.box-img
 						img.ofc(src="./assets/images/index/item-sale-2.png", alt="", srcset="")
 					figcaption
-						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean commodo ligula eget dolor.
+						p Công nghệ nâng ngực 6.0 Nano Motiva mang đến cho bạn gái khuôn ngực hoàn mỹ chỉ sau 1 tuần ổn định.
+						p Đặc biệt mang đến độ an toàn tuyệt đối theo quy trình xét nghiệm tiền phẫu và chăm sóc hậu phẫu nghiêm ngặt.
 			.item-sale.col-md-4.wow.fadeInLeft(data-wow-delay=".6s")
 				figure
 					.box-img
 						img.ofc(src="./assets/images/index/item-sale-3.png", alt="", srcset="")
 					figcaption
-						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean commodo ligula eget dolor.
+						p Nâng mũi cấu trúc sẽ đảm bảo gương mặt bạn luôn thanh tú và hài hòa với chiếc mũi cao tỷ lệ vàng, không đau và không gây biến chứng.
