--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -14,6 +14,10 @@
 									.image
 										img.ofc(src="./assets/images/index/item-before-after.png", alt="", srcset="")
 								figcaption
-									p Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
+									p "Trăm nghe không bằng một thấy" 
+									p Chúng tôi hiểu những lo lắng của bạn trước quyết định thẩm mỹ
+									p Chúng tôi hiểu những băn khoăn của bạn về hiệu quả sau phẫu thuật 
+									p … Chúng tôi tin rằng những cực phẩm thẩm mỹ thành công trên đây sẽ là minh chứng người thật - việc thật giúp bạn có những quyết định sáng suốt trong công cuộc hướng tới đỉnh cao sắc vóc!
+									p Liên hệ ngay với chúng tôi để nhận được những Ưu đãi cực chất từ ĐẠI TIỆC LÀM ĐẸP WORLDWIDE 2019
 			.swiper-button-next
 			.swiper-button-prev
