--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -10,6 +10,14 @@ body {
 	}
 }
 
+main {
+	padding-top: 122px;
+
+	@media (max-width: 767.98px) {
+		padding-top: 70px;
+	}
+}
+
 .overlay {
 	@media (max-width: 1199.98px) {
 		opacity       : 0;
