--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -1,3 +1,14 @@
-.index-1.wow.fadeIn(data-wow-delay=".2s")
+.index-1
 	figure
-		img.ofc(src="./assets/images/index/main-banner.png", alt="", srcset="")
+		.box-img
+			img.ofc(src="./assets/images/index/main-banner.png", alt="", srcset="")
+		figcaption
+			img.wow.fadeInUp(data-wow-delay="1.6s" src="./assets/images/index/item-baner.png", alt="")
+			h3.wow.fadeInUp(data-wow-delay=".4s") NÂNG NGỰC 6.0 LÀ GÌ?
+			ul.list-content
+				li.item.wow.fadeInLeft(data-wow-delay="1s") Không Mặc Áo Định Hình
+				li.item.wow.fadeInLeft(data-wow-delay="1.5s") Không Ống Dẫn Lưu
+				li.item.wow.fadeInLeft(data-wow-delay="2s") Không Bang Ép
+				li.item.wow.fadeInLeft(data-wow-delay="2.5s" data-wow-offset=-1000) Không Cần Áo Ngực
+				li.item.wow.fadeInLeft(data-wow-delay="3s" data-wow-offset=-1000) Không Chạm Vào Túi Ngực
+			p.wow.fadeInLeft(data-wow-delay="4s" data-wow-offset=-1000) Từ ngày 01.12 - 31.12
