--- a/src/components/index/i-2.pug
+++ b/src/components/index/i-2.pug
@@ -16,8 +16,7 @@
 					.box-img
 						img.ofc(src="./assets/images/index/item-sale-2.png", alt="", srcset="")
 					figcaption
-						p Công nghệ nâng ngực 6.0 Nano Motiva mang đến cho bạn gái khuôn ngực hoàn mỹ chỉ sau 1 tuần ổn định.
-						p Đặc biệt mang đến độ an toàn tuyệt đối theo quy trình xét nghiệm tiền phẫu và chăm sóc hậu phẫu nghiêm ngặt.
+						p Công nghệ nâng ngực 6.0 Nano Motiva mang đến cho bạn gái khuôn ngực hoàn mỹ chỉ sau 1 tuần ổn định. Đặc biệt mang đến độ an toàn tuyệt đối theo quy trình xét nghiệm tiền phẫu và chăm sóc hậu phẫu nghiêm ngặt.
 			.item-sale.col-md-4.wow.fadeInLeft(data-wow-delay=".6s")
 				figure
 					.box-img
