--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -7,16 +7,15 @@
 		.slider-before-after
 			.swiper-container
 				.swiper-wrapper
-					-for(i=1;i<100;i++)
+					-for(i=1;i<3;i++)
 						.swiper-slide
 							figure
 								.block-image
 									.image
-										img.ofc(src="./assets/images/index/item-before-after.png", alt="", srcset="")
+										img.ofc(src="./assets/images/index/item-before-after-"+i+".png", alt="", srcset="")
 								figcaption
 									p "Trăm nghe không bằng một thấy" 
-									p Chúng tôi hiểu những lo lắng của bạn trước quyết định thẩm mỹ
-									p Chúng tôi hiểu những băn khoăn của bạn về hiệu quả sau phẫu thuật 
+									p Chúng tôi hiểu những lo lắng của bạn trước quyết định thẩm mỹ. Chúng tôi hiểu những băn khoăn của bạn về hiệu quả sau phẫu thuật 
 									p … Chúng tôi tin rằng những cực phẩm thẩm mỹ thành công trên đây sẽ là minh chứng người thật - việc thật giúp bạn có những quyết định sáng suốt trong công cuộc hướng tới đỉnh cao sắc vóc!
 									p Liên hệ ngay với chúng tôi để nhận được những Ưu đãi cực chất từ ĐẠI TIỆC LÀM ĐẸP WORLDWIDE 2019
 			.swiper-button-next
