--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -42,11 +42,12 @@ main {
 }
 
 #phone-fixed {
-	position  : fixed;
-	right     : 27px;
-	top       : 535px;
-	z-index   : 100;
-	text-align: center;
+	position: fixed;
+	right   : 27px;
+	bottom  : 50px;
+	z-index : 500;
+	width   : 100px;
+	height  : 100px;
 
 	p {
 		font-size    : 24px;
@@ -54,18 +55,20 @@ main {
 		margin-bottom: 10px;
 	}
 
-	@media (max-width: 1024.98px) {
-		right: 0;
+	svg {
+		width : 100%;
+		height: 100%;
+	}
 
-		svg {
-			width: 70%;
-		}
+	@media (max-width: 1024.98px) {
+		right : 15px;
+		width : 75px;
+		height: 75px;
 	}
 
 	@media (max-width: 767.98px) {
-		svg {
-			width: 50%;
-		}
+		width : 50px;
+		height: 50px;
 	}
 }
 
