--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -3,7 +3,7 @@
 		.box-img
 			img.ofc(src="./assets/images/index/main-banner.png", alt="", srcset="")
 		figcaption
-			img.wow.fadeInUp(data-wow-delay="1.6s" src="./assets/images/index/item-baner.png", alt="")
+			img(src="./assets/images/index/item-baner.png", alt="")
 			h3.wow.fadeInUp(data-wow-delay=".4s") NÂNG NGỰC 6.0 LÀ GÌ?
 			ul.list-content
 				li.item.wow.fadeInLeft(data-wow-delay="1s") Không Mặc Áo Định Hình
