--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -23,7 +23,8 @@ html(lang="en")
 		block footer
 			include _footer.pug
 		#phone-fixed
-			img.svg(src="./assets/images/icons/phone.svg", alt="")
+			a(href="tel:0982987412")
+				img.svg(src="./assets/images/icons/phone.svg", alt="")
 		.overlay
 		//- include scripts
 		script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
