--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -7,16 +7,19 @@
 		.slider-before-after
 			.swiper-container
 				.swiper-wrapper
-					-for(i=1;i<3;i++)
-						.swiper-slide
-							figure
-								.block-image
-									.image
-										img.ofc(src="./assets/images/index/item-before-after-"+i+".png", alt="", srcset="")
-								figcaption
-									p "Trăm nghe không bằng một thấy" 
-									p Chúng tôi hiểu những lo lắng của bạn trước quyết định thẩm mỹ. Chúng tôi hiểu những băn khoăn của bạn về hiệu quả sau phẫu thuật 
-									p … Chúng tôi tin rằng những cực phẩm thẩm mỹ thành công trên đây sẽ là minh chứng người thật - việc thật giúp bạn có những quyết định sáng suốt trong công cuộc hướng tới đỉnh cao sắc vóc!
-									p Liên hệ ngay với chúng tôi để nhận được những Ưu đãi cực chất từ ĐẠI TIỆC LÀM ĐẸP WORLDWIDE 2019
+					.swiper-slide
+						figure
+							.block-image
+								.image
+									img.ofc(src="./assets/images/index/item-before-after-1.png", alt="", srcset="")
+							figcaption
+								p "Bước ra từ Worldwide, tôi đã có một cuộc sống mới với sự tự tin và thoải mái. Tôi tự tin vì tôi đẹp, tôi được tỏa sáng theo cách riêng của tôi! Tôi thoải mái vì tôi hạnh phúc với lựa chọn của mình, vì sức khỏe tôi được đảm bảo khi chọn dịch vụ tại Bệnh viện Thẩm mỹ Worldwide!"
+					.swiper-slide
+						figure
+							.block-image
+								.image
+									img.ofc(src="./assets/images/index/item-before-after-2.png", alt="", srcset="")
+							figcaption
+								p "Mỗi sáng thức dậy, tôi luôn ngắm mình trước gương và thầm cảm ơn những gì mà Worldwide đã mang đến. Cuộc sống tôi đổi thay với nhiều cơ hội mới, vẻ đẹp mà các bác sĩ Worldwide mang lại giúp con đường tôi đi rộng mở hơn! Worldwide chính là sự lựa chọn đúng đắn của tôi!"
 			.swiper-button-next
 			.swiper-button-prev
