--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -250,6 +250,17 @@ main {
 		}
 	}
 
+	&:after {
+		content   : '';
+		position  : absolute;
+		width     : 100%;
+		height    : 50%;
+		bottom    : 0;
+		left      : 0;
+		background: #F9F9F9;
+		z-index   : -1;
+	}
+
 	@media (max-width: 1024.98px) {
 		margin-top: 25px;
 
