--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -41,13 +41,21 @@ main {
 	}
 }
 
+.fb-customerchat>span>iframe {
+	bottom: 155pt !important;
+}
+
+.fb_dialog {
+	bottom: 140px !important;
+}
+
 #phone-fixed {
 	position: fixed;
-	right   : 27px;
+	right   : 18pt;
 	bottom  : 50px;
 	z-index : 500;
-	width   : 100px;
-	height  : 100px;
+	width   : 65px;
+	height  : 65px;
 
 	p {
 		font-size    : 24px;
@@ -58,17 +66,6 @@ main {
 	svg {
 		width : 100%;
 		height: 100%;
-	}
-
-	@media (max-width: 1024.98px) {
-		right : 15px;
-		width : 75px;
-		height: 75px;
-	}
-
-	@media (max-width: 767.98px) {
-		width : 50px;
-		height: 50px;
 	}
 }
 
