--- a/src/components/index/i-3.pug
+++ b/src/components/index/i-3.pug
@@ -2,12 +2,10 @@
 	.container
 		.block-form-index-3
 			.block-form
-				.title-form.wow.fadeIn(data-wow-delay=".2s") NHẬN NGAY ƯU ĐÃI ĐẶC BIỆT
+				.title-form.wow.fadeIn(data-wow-delay=".2s") ĐĂNG KÝ TƯ VẤN MIỄN PHÍ CÙNG BÁC SĨ ĐẦU NGÀNH,
 					br
-					| CHỈ TRONG THÁNG 12
-				.desc Để được hỗ trợ MIỄN PHÍ và NHANH NHẤT, Quý khách hãy cung cấp thông tin
-					br
-					| bên dưới. WORLDWIDE cam kết mọi thông tin là bảo mật.
+					| NHẬN NGAY ƯU ĐÃI -40% CHỈ TRONG THÁNG 12
+				.desc Worldwide cam kết bảo mật thông tin khách hàng! Đăng ký gặp tư vấn viên tham khảo giá tốt nhất thị trường ngay hôm nay!
 				form(action="#")
 					.form-group
 						.input-group
