--- a/src/components/index/i-3.pug
+++ b/src/components/index/i-3.pug
@@ -5,7 +5,9 @@
 				.title-form.wow.fadeIn(data-wow-delay=".2s") ĐĂNG KÝ TƯ VẤN MIỄN PHÍ CÙNG BÁC SĨ ĐẦU NGÀNH,
 					br
 					| NHẬN NGAY ƯU ĐÃI -40% CHỈ TRONG THÁNG 12
-				.desc Worldwide cam kết bảo mật thông tin khách hàng! Đăng ký gặp tư vấn viên tham khảo giá tốt nhất thị trường ngay hôm nay!
+				.desc Worldwide cam kết bảo mật thông tin khách hàng !
+					br
+					| Đăng ký gặp tư vấn viên tham khảo giá tốt nhất thị trường ngay hôm nay !
 				form(action="#")
 					.form-group
 						.input-group
